<resources>
    <string name="app_name">RxUIDemo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">REGISTRATION</string>

    <string name="registration_title">Sign Up!</string>
    <string name="registration_tag_line">It\'s free &amp; always will be!</string>
    <string name="registration_full_name">Full name</string>
    <string name="registration_user_name">User name</string>
    <string name="registration_email">Email</string>
    <string name="registration_country_code">+91</string>
    <string name="registration_mobile_number">Mobile number</string>
    <string name="registration_date_of_birth">Date of Birth</string>
    <string name="registration_accept_tnc">I accept the</string>
    <string name="registration_tnc_linked_text">Terms &amp; Conditions</string>
    <string name="register_button">SignUp</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="registration_link">Not Registered? SignUp now!</string>
    <string name="login_title">SignIn</string>
    <string name="login_subtitle">Always we\'ll be with you!</string>
    <string name="login_user_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">SignIn</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="login_failed_msg">I Guess you\'ve not visited presenter yet!!</string>
</resources>
