<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jay.com.rxuidemo.register.RegistrationActivity"
    tools:showIn="@layout/activity_registration">
    <!-- progress -->
    <ProgressBar
        android:id="@+id/progress_bar_registration"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view_registration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/registration_parent_left_right"
        android:layout_marginStart="@dimen/registration_parent_left_right"
        android:layout_marginTop="@dimen/registration_parent_bottom_top_margin"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/registration_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/title_font_size"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/text_view_tag_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_subtitle_top_margin"
                android:gravity="center_horizontal"
                android:text="@string/registration_tag_line"
                android:textColor="@color/registration_text_color"
                android:textSize="@dimen/normal_text_size"
                android:typeface="monospace" />

            <!-- First name-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_text_view_top_margin"
                android:textColorHint="@color/registration_text_hint_color"
                android:theme="@style/text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <requestFocus />

                <EditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/registration_full_name"
                    android:inputType="text|textNoSuggestions"
                    android:maxLength="50"
                    android:textColor="@color/registration_text_color"
                    android:textSize="@dimen/normal_text_size" />
            </android.support.design.widget.TextInputLayout>

            <!-- Last name-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_text_view_top_margin"
                android:textColorHint="@color/registration_text_hint_color"
                android:theme="@style/text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <requestFocus />

                <EditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/registration_user_name"
                    android:inputType="text|textNoSuggestions"
                    android:maxLength="50"
                    android:textColor="@color/registration_text_color"
                    android:textSize="@dimen/normal_text_size" />
            </android.support.design.widget.TextInputLayout>
            <!-- Email-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_text_view_top_margin"
                android:textColorHint="@color/registration_text_hint_color"
                android:theme="@style/text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="250"
                    android:textColor="@color/registration_text_color"
                    android:textSize="@dimen/normal_text_size" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_text_view_top_margin"
                android:orientation="horizontal">


                <!-- Country code-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/code_end_margin"
                    android:textColorHint="@color/registration_text_hint_color"
                    android:theme="@style/text_input_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <EditText
                        android:id="@+id/edit_text_country_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="number"
                        android:text="@string/registration_country_code"
                        android:textColor="@color/registration_text_color"
                        android:textSize="@dimen/normal_text_size" />
                </android.support.design.widget.TextInputLayout>

                <!-- Mobile-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/registration_text_hint_color"
                    android:theme="@style/text_input_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <EditText
                        android:id="@+id/edit_text_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_mobile_number"
                        android:inputType="number"
                        android:maxLength="9"
                        android:textColor="@color/registration_text_color"
                        android:textSize="@dimen/normal_text_size" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <!-- Date of birth-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_text_view_top_margin"
                android:focusable="false"
                android:textColorHint="@color/registration_text_hint_color"
                android:theme="@style/text_input_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/edit_text_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/registration_date_of_birth"
                    android:inputType="date"
                    android:textColor="@color/registration_text_color"
                    android:textSize="@dimen/normal_text_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/registration_footer_margin_top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/registration_tnc_margin_bottom"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <!-- Accept TnC-->
            <CheckBox
                android:id="@+id/checkbox_registration_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="@dimen/margin_8"
                android:text="@string/registration_accept_tnc"
                android:textColor="@color/registration_text_color"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/text_view_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:text="@string/registration_tnc_linked_text"
                android:textColor="@color/registration_profile_tnc"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>
        <!--Register button-->
        <Button
            android:id="@+id/button_register"
            style="@style/button_footer"
            android:enabled="false"
            android:text="@string/register_button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
